--- a/index.html
+++ b/index.html
@@ -7,6 +7,37 @@
     <link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body>
-    <section class="hero"></section>
+    <section class="hero">
+        <div class="hero__content">
+            <h1 class="hero__content__branding">
+                <img src="./dist/images/disneyplus.svg" alt="DisneyPlus">
+            </h1>
+            <h3 class="title--small">
+                As melhores histórias em um só lugar
+            </h3>
+            <p>
+                <a href="#" class="link-text">Assinar o disney+</a>
+                <br>
+                <span class="text">
+                    R$ 27,90/mês o R$ 279,90/ano à vista*
+                </span>
+            </p>
+            <ul class="hero__content__combos">
+                <li class="hero__content__combos__combo">
+                    <img src="./dist/images/logos/disney_star_plus.png" alt="Disney+ - Star+ - Combo+">
+                    <button>Assine Agora</button>
+                    <span class="text">R$ 45,90/mes*</span>
+                </li>
+                <li class="hero__content__combos__combo">
+                    <img src="./dist/images/logos/disney_star_plus.png" alt="Disney+ - Star+ - Combo+">
+                    <button>Assine Agora</button>
+                    <span class="text">R$ 45,90/mes*</span>
+                </li>
+            </ul>
+            <p class="text--small">
+                *O preço pode variar caso a assinatira seja feita através de outras plataformas.
+            </p>
+        </div>
+    </section>
 </body>
 </html>
