--- a/index.html
+++ b/index.html
@@ -297,6 +297,6 @@
         <p class="text--small">Disney+ é um serviço pago baseado em assinaturas e sujeito a termos e condições. O serviço Disney+ é comercializado por The Walt Disney Company(Brasil) Ltda., World Trade Center, Av. Das Nações Unidas, 12.551, 12.555, 12.559, Piso 10, São Paulo/SP - CEP 04578-903, Brasil e CNPJ/M 000000000000</p>
         </footer>
     </footer>
-    <script src="./src/main.js"></script>
+    <script src="./dist/js/main.js"></script>
 </body>
 </html>
